--- a/dev/index.html
+++ b/dev/index.html
@@ -11,6 +11,6 @@
 <p>Index Page</p>
  
     <script type="text/javascript" src="../vendor/jquery/dist/jquery.min.js"></script>
-    <!--<script src="//localhost:35729/livereload.js"></script>-->
+    <script src="//localhost:35729/livereload.js"></script>
   </body>
 </html>
